Updated badge usage.